infra/docker/kube-converter/my-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              my-network: "true"
  podSelector:
    matchLabels:
      my-network: "true"
